--- a/sciencepub.conf
+++ b/sciencepub.conf
@@ -3,7 +3,6 @@ server {
     listen [::]:8080;
 
     root /usr/share/nginx/html;
-    try_files /index.html =404;
 
     expires -1;
 
@@ -13,4 +12,9 @@ server {
     sub_filter 'server_url' '$request_uri';
     sub_filter 'server_date' '$time_local';
     sub_filter 'request_id' '$request_id';
+
+    location / {
+        autoindex on;
+        root  /usr/share/nginx/html/;
+    } 
 }
